bynkc/tests/fixtures/negative/293_http_cors_unknown_field/src/api.bynk
context api

service api from http {
  cors {
    origins: ["https://app.example.com"],
    exposeHeaders: ["x-total"],
  }

  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
